# progressive-chat-reddit

./: AUTHORS.md  README.md  build.gradle  dependencies.gradle  gradle.properties
.github/: dependabot.yml
.github/workflows/: build.yml  danger.yml  nightly.yml  post-pr.yml  quality.yml  tests.yml
docs/: color_migration_guide.md  cpp_location_sharing.md  cpp_read_marker.md  cpp_slash_command.md  identity_server.md  known_element_bugs.md  nightly_build.md  notifications.md  ui-tests.md
matrix-sdk-android/src/main/java/org/matrix/android/sdk/internal/crypto/: EventDecryptor.kt
matrix-sdk-android/src/main/java/org/matrix/android/sdk/internal/session/room/summary/: RoomLastEvent.java  RoomSummaryDataSource.kt
tools/emojis/: README.md
tools/templates/ElementFeature/: template.xml
vector/: build.gradle
vector-app/: build.gradle
vector-app/src/debug/res/layout/: demo_theme_sample.xml  demo_themes.xml
vector-app/src/fdroid/java/chat/progressive/app/di/: FlavorModule.kt  NotificationTestModule.kt
vector-app/src/fdroid/java/chat/progressive/app/push/fcm/: FdroidFcmHelper.kt  FdroidNotificationTroubleshootTestManagerFactory.kt
vector-app/src/fdroid/java/im/vector/app/fdroid/: package-info.kt
vector-app/src/main/java/im/vector/app/: VectorApplication.kt
vector-app/src/main/java/im/vector/app/core/di/: SingletonModule.kt
vector-app/src/main/res/drawable-anydpi-v26/: ic_launcher_foreground.xml
vector-app/src/main/res/values/: colors.xml
vector-app/src/nightly/res/values/: colors.xml
vector-config/src/main/res/values/: config.xml  urls.xml
vector/src/main/: AndroidManifest.xml
vector/src/main/cpp/: CMakeLists.txt
vector/src/main/cpp/include/progressive/: account_data_utils.hpp  alarm_engine.hpp  audio_engine.hpp  auth_models.hpp  avatar_history.hpp  backup_utils.hpp  call_manager.hpp  call_models.hpp  chat_features.hpp  chat_preview.hpp  chat_tools.hpp  chunked_upload.hpp  circular_cache.hpp  client_info.hpp  connection_monitor.hpp  content_filter.hpp  content_guard.hpp  content_scanner.hpp  content_utils.hpp  create_room.hpp  cross_signing.hpp  cross_signing_manager.hpp  crypto_models.hpp  date_utils.hpp  decryptor_utils.hpp  deleted_archive.hpp  desync_detector.hpp  device_manager.hpp  device_manager_full.hpp  device_naming.hpp  displayname_utils.hpp  draft_manager.hpp  e2ee_decoration.hpp  encrypted_file.hpp  event_classifier.hpp  event_display.hpp  event_encryption.hpp  event_link.hpp  event_models.hpp  event_relations.hpp  (+114 more)
vector/src/main/cpp/src/: account_data_utils.cpp  alarm_engine.cpp  auth_models.cpp  avatar_history.cpp  call_manager.cpp  call_models.cpp  chat_features.cpp  chunked_upload.cpp  connection_monitor.cpp  content_guard.cpp  content_utils.cpp  cross_signing.cpp  decryptor_utils.cpp  deleted_archive.cpp  device_manager.cpp  device_manager_full.cpp  device_naming.cpp  displayname_utils.cpp  draft_manager.cpp  e2ee_decoration.cpp  event_encryption.cpp  event_link.cpp  event_models.cpp  event_relations.cpp  event_relations_manager.cpp  event_timeline.cpp  event_utils.cpp  exporter.cpp  http_client.cpp  identity_server_manager.cpp  invitation_hide.cpp  jni_bridge.cpp  json_parser.cpp  jumptodate.cpp  key_backup.cpp  latency_stats.cpp  lightweight_call.cpp  lightweight_settings.cpp  live_draft.cpp  matrix_api.cpp  (+59 more)
vector/src/main/cpp/tests/: test_progressive.cpp
vector/src/main/java/chat/progressive/app/native/: ProgressiveNative.kt
vector/src/main/java/chat/progressive/app/protocol/: ProtocolInterfaces.kt  ProtocolManager.kt
vector/src/main/java/chat/progressive/app/reddit/: RedditMessage.kt  RedditModels.kt  RedditNative.kt  RedditRoom.kt  RedditSession.kt  RedditSessionHolder.kt
vector/src/main/java/im/vector/app/core/extensions/: Session.kt
vector/src/main/java/im/vector/app/features/command/: Command.kt  CommandParser.kt  ParsedCommand.kt
vector/src/main/java/im/vector/app/features/home/: HomeActivityViewModel.kt  NewHomeDetailFragment.kt
vector/src/main/java/im/vector/app/features/home/room/detail/: TimelineFragment.kt
vector/src/main/java/im/vector/app/features/home/room/detail/composer/: MessageComposerFragment.kt  MessageComposerViewEvents.kt  MessageComposerViewModel.kt
vector/src/main/java/im/vector/app/features/home/room/detail/timeline/action/: EventSharedAction.kt  MessageActionsViewModel.kt
vector/src/main/java/im/vector/app/features/html/: EventHtmlRenderer.kt
vector/src/main/java/im/vector/app/features/jumptodate/: ProgressiveNative.kt
vector/src/main/java/im/vector/app/features/onboarding/ftueauth/: FtueAuthCombinedRegisterFragment.kt  FtueAuthCombinedServerSelectionFragment.kt
vector/src/main/java/im/vector/app/features/settings/: VectorPreferences.kt  VectorSettingsUrls.kt
vector/src/main/java/im/vector/app/features/settings/legals/: ElementLegals.kt
vector/src/main/res/drawable/: element_logo_stars.xml  ic_ems_logo.xml  ic_login_splash_scales.xml  ic_logo_element_matrix_services.xml
vector/src/main/res/layout/: fragment_new_home_detail.xml
vector/src/main/res/xml/: vector_settings_labs.xml
